# pdbe-bioskills

./: README.md  pyproject.toml
profiles/3d-beacons-aggregator/: AGENTS.md
profiles/advisory-orchestrator/: llm-advisory-roles.md
profiles/afdb-model-reviewer/: AGENTS.md
profiles/binding-site-analyser/: AGENTS.md
profiles/biophysical-assay-scientist/: AGENTS.md
profiles/coding/: AGENTS.md
profiles/deposition-reviewer/: AGENTS.md
profiles/fixture-curator/: AGENTS.md
profiles/homodimer-orchestrator/: AGENTS.md
profiles/homodimer-reporter/: AGENTS.md
profiles/lifecycle-orchestrator/: AGENTS.md
profiles/notebook-builder/: AGENTS.md
profiles/notebook-reviewer/: AGENTS.md
profiles/notebook-validator/: AGENTS.md
profiles/pdbekb-annotator/: AGENTS.md
profiles/project-manager/: AGENTS.md
profiles/scientific-python-engineer/: AGENTS.md
profiles/sifts-mapper/: AGENTS.md
profiles/spec-reviewer/: AGENTS.md
profiles/structural-biologist/: AGENTS.md
profiles/structure-quality-assessor/: AGENTS.md
profiles/technical-writer/: AGENTS.md
profiles/visualization-engineer/: AGENTS.md
skills/afdb-api-fetching/: SKILL.md
skills/aggregated-interface-ingestion/: SKILL.md
skills/concept-to-prd/: SKILL.md
skills/convert-to-prd/: SKILL.md
skills/fixture-selection/: SKILL.md
skills/lis-implementation/: SKILL.md
skills/molviewspec-rendering/: SKILL.md
skills/notebook-from-spec/: SKILL.md
skills/notebook-review/: SKILL.md
skills/notebook-spec-review/: SKILL.md
skills/notebook-ux-contract/: SKILL.md
skills/pae-visualization/: SKILL.md
(+107 files in other folders)
