[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdbe-bioskills"
version = "0.1.0"
description = "Claude Code skills and agent profiles for life sciences and bioinformatics workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Nikos Pechlivanis", email = "npechlv@gmail.com" }]
keywords = ["bioinformatics", "claude", "codex", "AI", "life-sciences"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "platformdirs>=3",
]

[project.scripts]
pdbe-bioskills = "pdbe_bioskills.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pdbe_bioskills"]
